async await demo second commit

--- a/18-08-2022/index.html
+++ b/18-08-2022/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-
+    <h1 style="border: 1px solid red;"></h1>
     <!-- <script src="./asyncAwaitDemo.js"></script> -->
-    <script src="./asyncAwaitDemo2.js"></script>
+     <script src="./asyncAwaitDemo2.js"></script>
+    <!--<script>
+        let h1 = document.querySelector('h1')
+        h1.innerText = loadingMsg
+    </script> -->
 </body>
 </html>
